// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`breakpoint split view 1`] = `
<g
  data-testid="pacbio_hg002_breakpoints-loaded"
  fill="none"
  stroke-width="1"
>
  <path
    d="M 408.99312656000257 92.5 C 529.0047789137825 92.5 283.4070278614745 492.5 403.4186802152544 492.5"
    data-testid="r1"
    stroke="#af4d19"
    stroke-opacity="0.8"
    stroke-width="1"
  />
  <path
    d="M 408.99312656000257 92.5 C 529.0047789137825 92.5 283.4070278614745 492.5 403.4186802152544 492.5"
    pointer-events="stroke"
    stroke="transparent"
    stroke-width="10"
  />
  <path
    d="M 658.4186802152544 492.5 C 806.3009739923543 492.5 259.11083278290266 68.5 406.99312656000257 68.5"
    data-testid="r1"
    stroke="#af4d19"
    stroke-opacity="0.8"
    stroke-width="1"
  />
  <path
    d="M 658.4186802152544 492.5 C 806.3009739923543 492.5 259.11083278290266 68.5 406.99312656000257 68.5"
    pointer-events="stroke"
    stroke="transparent"
    stroke-width="10"
  />
</g>
`;

exports[`breakpoint split view 2`] = `
<g
  data-testid="pacbio_vcf-loaded"
  fill="none"
  stroke="#2e7d32"
  stroke-width="5"
>
  <path
    d="M 388.99312656000257 296.5 L 408.99312656000257 296.5 L 403.4186802152544 688.5 L 423.4186802152544 688.5"
    data-testid="r2"
    stroke-width="5"
  />
  <path
    d="M 388.99312656000257 296.5 L 408.99312656000257 296.5 L 403.4186802152544 688.5 L 423.4186802152544 688.5"
    pointer-events="stroke"
    stroke="transparent"
    stroke-width="10"
  />
</g>
`;
